--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
 body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-family: 'Pacifico', cursive;
+  color: white;
+}
+
+h1,
+p {
+  padding: 0;
   margin: 0;
 }
 
+.text-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 5%;
+  width: 100%;
+  height: 20%;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  z-index: 2;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    to right top,
+    #ffff34,
+    #ffc812,
+    #ff8f2f,
+    #e44d2e,
+    #9e1b32
+  );
+  background-size: 50% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 6vw;
+  animation: gradientAnimation 7.5s ease alternate infinite;
+}
+
+p {
+  text-transform: uppercase;
+  z-index: 2;
+  font-size: 1.5vw;
+  font-family: 'Work Sans', sans-serif;
+}
+
+@keyframes gradientAnimation {
+  to {
+    background-position: 100% top;
+  }
+}
+
+img {
+  z-index: 1;
+  bottom: 5%;
+  left: 50%;
+}
+
+img,
 canvas {
   cursor: pointer;
   position: absolute;
